--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@popperjs/core": "^2.11.2",
+    "angular": "^1.8.2",
+    "bootstrap": "^5.1.3",
+    "css": "^3.0.0",
+    "leaflet": "^1.7.1",
+    "leaflet-transitionedicon": "^0.2.1",
+    "moment": "^2.29.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -27,7 +34,8 @@
     "@angular/cli": "~13.1.2",
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
+    "@types/leaflet": "^1.7.9",
+    "@types/node": "^12.20.47",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
